tests-system/checks-1/output
checks T {
       ^ checks-1/foo.check:3: warning: move this check block into foo.rsl:1 [deprecated_feature]
a < b, "a must be less than b"
    ^ checks-1/foo.check:4: warning: expression could be null [vcg-evaluation-of-null]
    | example record_type triggering error:
    |   T bad_potato {
    |     a = 0
    |     /* b is null */
    |   }
T Test_1 {
  ^^^^^^ checks-1/foo.trlc:3: error: rhs of check a < b (foo.check:4) must not be null
T Test_2 {
  ^^^^^^ checks-1/foo.trlc:7: check error: a must be less than b
Processed 1 model(s), 1 check(s) and 1 requirement file(s) and found 2 warning(s) and 2 error(s)
